Add a route to add a new tag and associate it to an item
